--- a/static/app.css
+++ b/static/app.css
@@ -2,3 +2,28 @@
     background-color: transparent;
     background-image: url(./raindrops-animate.svg);
 }
+
+
+.title {
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    font-size: xx-large;
+    font-weight: 500;
+    letter-spacing: 10px;
+}
+
+
+.second-title {
+    font-family: 'Poppins', sans-serif;
+    color: #333;
+    font-size: xx-large;
+    font-weight: 700;
+
+}
+
+.content {
+    font-family: 'Poppins', sans-serif;
+    color:white;
+    font-size: large;
+    font-weight: 300;
+}
